--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,14 @@ p {
 nav {
   background-color: #bae8e8;
 }
+
+h1 {
+  font-size: 3.125rem;
+  text-align: center;
+}
+
+li img {
+  width:  100%;
+  height: 100px;
+  object-fit: contain;
+}
